# whisper-sample

./: .gitignore  README.md  pyproject.toml
src/whisper-sample/: __init__.py  main.py
