[project]
name = "whisper-sample"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "tnmt", email = "tanimoto.masashi@protonmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "mypy",
    "ruff",
    "openai-whisper>=20230918",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
# 最大文字数 指定文字数を超えたら改行
line_length = 88

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
line-length = 88

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]
